<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/drawerLayout"
    android:fitsSystemWindows="true"
    tools:context=".Perfil">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:background="@color/backgroundLoadScreen"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ivFotoPerfil"
                android:layout_width="109dp"
                android:layout_height="74dp"
                android:layout_gravity="center"
                android:layout_marginTop="55dp"
                android:src="@drawable/logotipo" />
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/claclo153_gmail_com"
                android:layout_gravity="center"
                android:textColor="@color/white"
                android:layout_marginTop="10dp"
                android:textStyle="bold"
                android:textSize="21sp"/>
        </LinearLayout>
        <androidx.cardview.widget.CardView
            android:layout_width="340dp"
            android:layout_height="120dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="200dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:weightSum="3">
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">
                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/username"
                        android:textSize="20sp"/>
                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tvUsername"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text=""
                        android:textStyle="bold"
                        android:textSize="20sp"
                        android:paddingTop="10dp" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">
                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/nome"
                        android:textSize="20sp"/>
                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tvNome"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text=""
                        android:textStyle="bold"
                        android:textSize="20sp"
                        android:paddingTop="10dp" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">
                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/apelido"
                        android:textSize="20sp"/>
                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tvApelido"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text=""
                        android:textStyle="bold"
                        android:textSize="20sp"
                        android:paddingTop="10dp" />
                </LinearLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_marginLeft="80dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="350dp"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="80dp">


            <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/imageView1"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginLeft="20dp"
                    android:src="@drawable/logotipo"
                    android:layout_marginStart="20dp" />

            <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvTelemovel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cl_udio_garcia"
                    android:textStyle="bold"
                    android:textColor="@color/backgroundLoadScreen"
                    android:layout_marginTop="-30dp"
                    tools:ignore="RtlSymmetry"
                    android:layout_marginLeft="70dp"/>


            <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/imageView"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginLeft="20dp"
                    android:src="@drawable/logotipo"
                    />

            <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvDataNasc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cl_udio_garcia"
                    android:textStyle="bold"
                    android:textColor="@color/backgroundLoadScreen"
                    android:layout_marginTop="-30dp"
                    tools:ignore="RtlSymmetry"
                    android:layout_marginLeft="70dp"/>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/linearLayout1"
            android:layout_marginTop="50dp"
            android:gravity="center_horizontal">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnPerfil"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_button"
                android:textColor="@color/white" />

        </LinearLayout>


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvLogout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:onClick="Logout"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="170dp"
            android:layout_marginLeft="150dp"
            android:layout_marginBottom="20dp">
        </androidx.appcompat.widget.AppCompatTextView>
    </RelativeLayout>


    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <include
        layout="@layout/navigation_action"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    </include>
    </LinearLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        app:menu="@menu/navigation_menu"
        android:layout_gravity="start"
        app:headerLayout="@layout/navigation_header">
    </com.google.android.material.navigation.NavigationView>

</androidx.drawerlayout.widget.DrawerLayout>