<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Registar">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="3dp"
        app:cardPreventCornerOverlap="false"
        app:cardUseCompatPadding="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="3dp"
                android:layout_marginTop="70dp"
                android:adjustViewBounds="true"
                android:maxWidth="202dp"
                android:maxHeight="202dp"
                android:scaleType="fitCenter"
                android:src="@drawable/registar_icon" />

            <LinearLayout
                android:id="@+id/linearLayout1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/imageView"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:background="@color/backgroundLoadScreen"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp"
                    android:fontFamily="sans-serif-medium"
                    android:text="registe-se"
                    android:textColor="@color/white"
                    android:textSize="22sp" />


            </LinearLayout>

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_below="@+id/linearLayout1"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="-10dp"
                android:rotation="45"
                android:src="@drawable/square" />

            <RelativeLayout
                android:id="@+id/relativeLayout1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/imageView1"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="30dp"
                android:layout_marginRight="20dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:outlineAmbientShadowColor="@color/backgroundLoadScreen"
                    android:outlineSpotShadowColor="@color/backgroundLoadScreen"
                    android:textColorHint="@color/backgroundLoadScreen"
                    app:boxBackgroundColor="@color/backgroundLoadScreen"
                    app:boxStrokeColor="@color/backgroundLoadScreen"
                    app:counterOverflowTextColor="@color/backgroundLoadScreen"
                    app:counterTextColor="@color/backgroundLoadScreen"
                    app:errorTextColor="@color/backgroundLoadScreen"
                    app:helperTextTextColor="@color/backgroundLoadScreen"
                    app:hintTextColor="@color/backgroundLoadScreen">

                    <EditText
                        android:id="@+id/txtEmailRegister"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/icon_user"
                        android:drawableLeft="@drawable/icon_user"
                        android:hint="@string/email"
                        android:imeOptions="actionNext"
                        android:minWidth="350dp"
                        android:outlineAmbientShadowColor="@color/backgroundLoadScreen"
                        android:outlineSpotShadowColor="@color/backgroundLoadScreen"
                        android:shadowColor="@color/backgroundLoadScreen"
                        android:singleLine="true"
                        android:textColor="@color/backgroundLoadScreen"
                        android:textColorHighlight="@color/backgroundLoadScreen"
                        android:textColorHint="@color/backgroundLoadScreen"
                        android:textColorLink="@color/backgroundLoadScreen"></EditText>
                </com.google.android.material.textfield.TextInputLayout>

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/relativeLayout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/relativeLayout1"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="20dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:outlineAmbientShadowColor="@color/backgroundLoadScreen"
                    android:outlineSpotShadowColor="@color/backgroundLoadScreen"
                    android:textColorHint="@color/backgroundLoadScreen"
                    app:boxBackgroundColor="@color/backgroundLoadScreen"
                    app:boxStrokeColor="@color/backgroundLoadScreen"
                    app:counterOverflowTextColor="@color/backgroundLoadScreen"
                    app:counterTextColor="@color/backgroundLoadScreen"
                    app:errorTextColor="@color/backgroundLoadScreen"
                    app:helperTextTextColor="@color/backgroundLoadScreen"
                    app:hintTextColor="@color/backgroundLoadScreen">

                    <EditText
                        android:id="@+id/txtPasswordRegister"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/img_password"
                        android:drawableLeft="@drawable/img_password"
                        android:hint="@string/palavra_passe"
                        android:imeOptions="actionNext"
                        android:minWidth="350dp"
                        android:outlineAmbientShadowColor="@color/backgroundLoadScreen"
                        android:outlineSpotShadowColor="@color/backgroundLoadScreen"
                        android:shadowColor="@color/backgroundLoadScreen"
                        android:singleLine="true"
                        android:textColor="@color/backgroundLoadScreen"
                        android:textColorHighlight="@color/backgroundLoadScreen"
                        android:textColorHint="@color/backgroundLoadScreen"
                        android:textColorLink="@color/backgroundLoadScreen"></EditText>
                </com.google.android.material.textfield.TextInputLayout>

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/relativeLayout3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/relativeLayout2"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="20dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:outlineAmbientShadowColor="@color/backgroundLoadScreen"
                    android:outlineSpotShadowColor="@color/backgroundLoadScreen"
                    android:textColorHint="@color/backgroundLoadScreen"
                    app:boxBackgroundColor="@color/backgroundLoadScreen"
                    app:boxStrokeColor="@color/backgroundLoadScreen"
                    app:counterOverflowTextColor="@color/backgroundLoadScreen"
                    app:counterTextColor="@color/backgroundLoadScreen"
                    app:errorTextColor="@color/backgroundLoadScreen"
                    app:helperTextTextColor="@color/backgroundLoadScreen"
                    app:hintTextColor="@color/backgroundLoadScreen">

                    <EditText
                        android:id="@+id/txtConfirmPasswordRegister"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/img_password"
                        android:drawableLeft="@drawable/img_password"
                        android:hint="@string/confirmar_palavra_passe"
                        android:imeOptions="actionNext"
                        android:minWidth="350dp"
                        android:outlineAmbientShadowColor="@color/backgroundLoadScreen"
                        android:outlineSpotShadowColor="@color/backgroundLoadScreen"
                        android:shadowColor="@color/backgroundLoadScreen"
                        android:singleLine="true"
                        android:textColor="@color/backgroundLoadScreen"
                        android:textColorHighlight="@color/backgroundLoadScreen"
                        android:textColorHint="@color/backgroundLoadScreen"
                        android:textColorLink="@color/backgroundLoadScreen"></EditText>
                </com.google.android.material.textfield.TextInputLayout>

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/relativeLayout4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/relativeLayout3"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="20dp">


                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rounded_button"
                    android:fontFamily="sans-serif-medium"
                    android:onClick="registar"
                    android:text="Registar"
                    android:textColor="@color/white" />

            </RelativeLayout>

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>